[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/map_world_controller.gd" id="1"]
[ext_resource type="Script" path="res://scripts/chunk_grid_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/player_universal_being.gd" id="3"]

[sub_resource type="SphereMesh" id="PlayerMesh"]
radius = 0.5
height = 1.0

[sub_resource type="Environment" id="WorldEnvironment"]
background_mode = 1
background_color = Color(0.05, 0.05, 0.1, 1)
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.4, 0.6, 1)
ambient_light_energy = 0.3

[node name="MAP_CHUNK_WORLD" type="Node3D"]
script = ExtResource("1")

[node name="ChunkGridManager" type="Node3D" parent="."]
script = ExtResource("2")
render_distance = 1
generation_distance = 2
auto_generate = true
debug_visualization = true

[node name="Player" type="Node3D" parent="." groups=["players"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("3")

[node name="PlasmoidMesh" type="MeshInstance3D" parent="Player"]
mesh = SubResource("PlayerMesh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.7, -0.5, 0.5, 0, 0.7, 0.7, -0.7, -0.5, 0.5, 0, 15, 0)
light_energy = 0.8
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("WorldEnvironment")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DebugInfo" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -10.0

[node name="GridStatus" type="Label" parent="UI/DebugInfo"]
layout_mode = 2
text = "Grid Status: Initializing..."

[node name="PlayerPos" type="Label" parent="UI/DebugInfo"]
layout_mode = 2
text = "Player: (0, 0, 0)"

[node name="ChunkInfo" type="Label" parent="UI/DebugInfo"]
layout_mode = 2
text = "Current Chunk: [0,0,0]"

[node name="Performance" type="Label" parent="UI/DebugInfo"]
layout_mode = 2
text = "FPS: 60"

[node name="Instructions" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 120.0

[node name="Title" type="Label" parent="UI/Instructions"]
layout_mode = 2
text = "MAP CHUNK WORLD"
horizontal_alignment = 1

[node name="Controls" type="Label" parent="UI/Instructions"]
layout_mode = 2
text = "WASD - Move
Mouse - Look around
Space/Shift - Up/Down
Ctrl+G - Toggle grid debug
F1 - Toggle debug UI
F2 - Print grid status
F3 - Force generate chunk
F4 - Clear all chunks"